The information section has been moved into the p section. This prevents messages from being displayed behind the information section.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,8 +54,18 @@ body {
   margin-left: 2%;
 }
 
+/*
+  No horizontal padding is added here because this class will contain an hr
+  that should go all the way across the screen. Instead, horizontal padding
+  will be added for components contained within this class.
+*/
 .infoTextSection {
   height: fit-content;
-  width: 90%;
-  margin: 25px 35px 25px 35px;
+  width: 100%;
+  padding: 10px 0px 10px 0px;
+}
+
+hr {
+  background-color: black;
+  height: 1px;
 }
